--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <!-- menu -->
                 <nav>
                     <ul>
-                        <li><a href="#" id="slector"></a>Inicio</li>
+                        <li><a href="#" id="selector">Inicio</a></li>
                         <li><a href="generos.html">Géneros</a>
                             <!-- submenu -->
                             <ul>
@@ -31,6 +31,7 @@
                                 <li><a href="#comedia">Comedia</a></li>
                             </ul>
                         </li>
+                        <li><a href="contacto.html">Contacto</a></li>
                         <!-- Enlaces de redes sociales -->
                         <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
                         <li><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
