--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <!-- lista de algunos servicios -->
                     <div class="sub">
                         <h4>Algunos servicios</h4>
-                        <ul>
+                        <ul class="list__style">
                             <li><i class="fa-solid fa-candy-cane"></i>Confitería</li>
                             <li><i class="fa-solid fa-hotdog"></i>Combos</li>
                             <li><i class="fa-solid fa-credit-card"></i>Pagos en línea</li>
@@ -174,7 +174,7 @@
     <div class="cta__main">
         <div class="frontpage__cta-wrapper">
             <h2 class="frontpage__cta-title">
-                Asesorias y destribución de películas.
+                Asesorias y distribución de películas.
             </h2>
             <a href="https://wa.link/s11g0k" class="frontpage__cta-action">
                 <span class="frontpage__cta-bottom">
