--- a/index.html
+++ b/index.html
@@ -63,22 +63,24 @@
                 <div class="frontpage__bg-overlay">
                     <div class="frontpage__bg-layer"></div>
                 </div>
-                <div class="hero__conten">
+                <div class="hero__content">
                     <div class="hero__elements">
                         <h1 class="hero__title">
                             Compra tus Tickets.
                         </h1>
-                        <a href="#nosotros" class="hero__action">
-                            <span class="hero__bottom">
-                                Promociones
-                            </span>
-                        </a>
-                        <a href="https://wa.link/s11g0k" target="_blank" class="hero__description">
-                            <div class="icon">
-                                <i class="fa-brands fa-whatsapp"></i>
-                            </div>
-                            Contáctenos
-                        </a>
+                        <div class="hero__wrapper">
+                            <a href="#nosotros" class="hero__action">
+                                <span class="hero__bottom">
+                                    Solicitar más información
+                                </span>
+                            </a>
+                            <a href="https://wa.link/s11g0k" target="_blank" class="hero__description">
+                                <div class="icon">
+                                    <i class="fa-brands fa-whatsapp"></i>
+                                </div>
+                                Contáctenos
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
