--- a/index.html
+++ b/index.html
@@ -172,6 +172,20 @@
             </div>
         </div>
     </section>
+    <!-- Películas internacionales -->
+    <section class="movies__main" id="internacional">
+        <div class="frontpage__links-wrapper">
+            <span class="subtitle">
+                Películas internacionales
+            </span>
+            <h2 class="links-title">
+                Películas en cartelera
+            </h2>
+            <p class="links-desc">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores libero itaque quia ex nisi, non recusandae repellendus ut, perferendis modi optio expedita! Laboriosam numquam, labore rem quas praesentium repellat ex.
+            </p>
+        </div>
+    </section>
     <!-- otros servicios -->
     <div class="cta__main">
         <div class="frontpage__cta-wrapper">
