--- a/index.html
+++ b/index.html
@@ -185,6 +185,159 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores libero itaque quia ex nisi, non recusandae repellendus ut, perferendis modi optio expedita! Laboriosam numquam, labore rem quas praesentium repellat ex.
             </p>
         </div>
+        <!-- Contenedor o box o caja para las movies -->
+        <div class="movies">
+            <div class="movie__internacional">
+                <div class="movie__internacional-image">
+                    <a href="https://www.cinecolombia.com/medellin/peliculas/transformers-el-despertar-de-las-bestias" target="_blank">
+                        <img src="https://archivos-cms.cinecolombia.com/images/_aliases/exhibition_poster/3/3/3/2/42333-1-esl-CO/d75be273a53b-480x670.jpg" alt="">
+                    </a>
+                </div>
+                <!-- Título de la película -->
+                <div class="nameMovie">
+                    <h3>Transformers: El despertar de las bestias</h3>
+                </div>
+                <!-- Descripción -->
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, hic. Nihil hic quam ex non praesentium sapiente perspiciatis, sint dolor ea, provident consequuntur excepturi laudantium dolorem blanditiis et veniam esse?
+                </p>
+                <div class="stars">
+                    <span>Estreno: 08-Jun-2023</span>
+                    <span>Géneros: Acción, Aventura, Ciencia Ficción</span>
+                    <span>Recomendada para mayores de 7 años</span>
+                    <span>Duración: 117 min</span>
+                </div>
+                <!-- Botón de compra -->
+                <div class="bay">
+                    <a href="http://www.cinecolombia.com/medellin/peliculas/transformers-el-despertar-de-las-bestias" target="_blank" class="button">Tickets</a>
+                </div>
+            </div>
+            <div class="movie__internacional">
+                <div class="movie__internacional-image">
+                    <a href="https://www.cinecolombia.com/medellin/peliculas/transformers-el-despertar-de-las-bestias" target="_blank">
+                        <img src="https://archivos-cms.cinecolombia.com/images/_aliases/exhibition_poster/3/3/3/2/42333-1-esl-CO/d75be273a53b-480x670.jpg" alt="">
+                    </a>
+                </div>
+                <!-- Título de la película -->
+                <div class="nameMovie">
+                    <h3>Transformers: El despertar de las bestias</h3>
+                </div>
+                <!-- Descripción -->
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, hic. Nihil hic quam ex non praesentium sapiente perspiciatis, sint dolor ea, provident consequuntur excepturi laudantium dolorem blanditiis et veniam esse?
+                </p>
+                <div class="stars">
+                    <span>Estreno: 08-Jun-2023</span>
+                    <span>Géneros: Acción, Aventura, Ciencia Ficción</span>
+                    <span>Recomendada para mayores de 7 años</span>
+                    <span>Duración: 117 min</span>
+                </div>
+                <!-- Botón de compra -->
+                <div class="bay">
+                    <a href="http://www.cinecolombia.com/medellin/peliculas/transformers-el-despertar-de-las-bestias" target="_blank" class="button">Tickets</a>
+                </div>
+            </div>
+            <div class="movie__internacional">
+                <div class="movie__internacional-image">
+                    <a href="https://www.cinecolombia.com/medellin/peliculas/transformers-el-despertar-de-las-bestias" target="_blank">
+                        <img src="https://archivos-cms.cinecolombia.com/images/_aliases/exhibition_poster/3/3/3/2/42333-1-esl-CO/d75be273a53b-480x670.jpg" alt="">
+                    </a>
+                </div>
+                <!-- Título de la película -->
+                <div class="nameMovie">
+                    <h3>Transformers: El despertar de las bestias</h3>
+                </div>
+                <!-- Descripción -->
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, hic. Nihil hic quam ex non praesentium sapiente perspiciatis, sint dolor ea, provident consequuntur excepturi laudantium dolorem blanditiis et veniam esse?
+                </p>
+                <div class="stars">
+                    <span>Estreno: 08-Jun-2023</span>
+                    <span>Géneros: Acción, Aventura, Ciencia Ficción</span>
+                    <span>Recomendada para mayores de 7 años</span>
+                    <span>Duración: 117 min</span>
+                </div>
+                <!-- Botón de compra -->
+                <div class="bay">
+                    <a href="http://www.cinecolombia.com/medellin/peliculas/transformers-el-despertar-de-las-bestias" target="_blank" class="button">Tickets</a>
+                </div>
+            </div>
+            <div class="movie__internacional">
+                <div class="movie__internacional-image">
+                    <a href="https://www.cinecolombia.com/medellin/peliculas/transformers-el-despertar-de-las-bestias" target="_blank">
+                        <img src="https://archivos-cms.cinecolombia.com/images/_aliases/exhibition_poster/3/3/3/2/42333-1-esl-CO/d75be273a53b-480x670.jpg" alt="">
+                    </a>
+                </div>
+                <!-- Título de la película -->
+                <div class="nameMovie">
+                    <h3>Transformers: El despertar de las bestias</h3>
+                </div>
+                <!-- Descripción -->
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, hic. Nihil hic quam ex non praesentium sapiente perspiciatis, sint dolor ea, provident consequuntur excepturi laudantium dolorem blanditiis et veniam esse?
+                </p>
+                <div class="stars">
+                    <span>Estreno: 08-Jun-2023</span>
+                    <span>Géneros: Acción, Aventura, Ciencia Ficción</span>
+                    <span>Recomendada para mayores de 7 años</span>
+                    <span>Duración: 117 min</span>
+                </div>
+                <!-- Botón de compra -->
+                <div class="bay">
+                    <a href="http://www.cinecolombia.com/medellin/peliculas/transformers-el-despertar-de-las-bestias" target="_blank" class="button">Tickets</a>
+                </div>
+            </div>
+            <div class="movie__internacional">
+                <div class="movie__internacional-image">
+                    <a href="https://www.cinecolombia.com/medellin/peliculas/transformers-el-despertar-de-las-bestias" target="_blank">
+                        <img src="https://archivos-cms.cinecolombia.com/images/_aliases/exhibition_poster/3/3/3/2/42333-1-esl-CO/d75be273a53b-480x670.jpg" alt="">
+                    </a>
+                </div>
+                <!-- Título de la película -->
+                <div class="nameMovie">
+                    <h3>Transformers: El despertar de las bestias</h3>
+                </div>
+                <!-- Descripción -->
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, hic. Nihil hic quam ex non praesentium sapiente perspiciatis, sint dolor ea, provident consequuntur excepturi laudantium dolorem blanditiis et veniam esse?
+                </p>
+                <div class="stars">
+                    <span>Estreno: 08-Jun-2023</span>
+                    <span>Géneros: Acción, Aventura, Ciencia Ficción</span>
+                    <span>Recomendada para mayores de 7 años</span>
+                    <span>Duración: 117 min</span>
+                </div>
+                <!-- Botón de compra -->
+                <div class="bay">
+                    <a href="http://www.cinecolombia.com/medellin/peliculas/transformers-el-despertar-de-las-bestias" target="_blank" class="button">Tickets</a>
+                </div>
+            </div>
+            <div class="movie__internacional">
+                <div class="movie__internacional-image">
+                    <a href="https://www.cinecolombia.com/medellin/peliculas/transformers-el-despertar-de-las-bestias" target="_blank">
+                        <img src="https://archivos-cms.cinecolombia.com/images/_aliases/exhibition_poster/3/3/3/2/42333-1-esl-CO/d75be273a53b-480x670.jpg" alt="">
+                    </a>
+                </div>
+                <!-- Título de la película -->
+                <div class="nameMovie">
+                    <h3>Transformers: El despertar de las bestias</h3>
+                </div>
+                <!-- Descripción -->
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, hic. Nihil hic quam ex non praesentium sapiente perspiciatis, sint dolor ea, provident consequuntur excepturi laudantium dolorem blanditiis et veniam esse?
+                </p>
+                <div class="stars">
+                    <span>Estreno: 08-Jun-2023</span>
+                    <span>Géneros: Acción, Aventura, Ciencia Ficción</span>
+                    <span>Recomendada para mayores de 7 años</span>
+                    <span>Duración: 117 min</span>
+                </div>
+                <!-- Botón de compra -->
+                <div class="bay">
+                    <a href="http://www.cinecolombia.com/medellin/peliculas/transformers-el-despertar-de-las-bestias" target="_blank" class="button">Tickets</a>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- otros servicios -->
     <div class="cta__main">
