--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                     Estamos aquí para ayudar
                 </h2>
                 <div class="cta__row">
-                    <a href="https://wa.link/s11g0k" class="hero__description"><i class="fa-brands fa-whatsapp"></i>Chat</a>
+                    <a href="https://wa.link/s11g0k" class="cta__btn"><i class="fa-brands fa-whatsapp"></i>Chat</a>
                 </div>
             </div>
         </div>
